force-app/main/default/objects/Contact/fields/Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date__c</fullName>
    <description>Creates Today&apos;s Date in format January 1, 2018. Used for Outreach Program&apos;s mail merge doctor letters.</description>
    <formula>CASE(
MONTH( TODAY() ) ,
1, &quot;January&quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY()))&amp;&quot; &quot;&amp;TEXT(YEAR(TODAY() )),
2,&quot;February&quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY() ))&amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY() )),
3,&quot;March&quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY() ))&amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY() )),
4, &quot;April&quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY() ))&amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY() )),
5, &quot;May&quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY() ))&amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY() )),
6, &quot;June&quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY() ))&amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY() )),
7,&quot;July&quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY() ))&amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY() )),
8, &quot;August&quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY() ))&amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY())) ,
9,&quot;September&quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY() ))&amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY())) ,
10, &quot;October&quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY() ))&amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY() )),
11,&quot;November&quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY() ))&amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY() )),
12,&quot;December &quot;&amp;&quot; &quot;&amp; TEXT(DAY(TODAY() ))&amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY() )),
&quot;Invalid Date&quot;)</formula>
    <label>Today&apos;s Date</label>
    <type>Text</type>
</CustomField>