force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Role (Relation to Child)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Surrogate</fullName>
            </value>
            <value>
                <fullName>Egg Donor</fullName>
            </value>
            <value>
                <fullName>Sperm Donor</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Midwife</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>Medical Assistant</fullName>
            </value>
            <value>
                <fullName>Physician Assistant</fullName>
            </value>
            <value>
                <fullName>Pregnancy Coordinator</fullName>
            </value>
            <value>
                <fullName>Practice Manager</fullName>
            </value>
            <value>
                <fullName>APRN</fullName>
            </value>
            <value>
                <fullName>Doula</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Surrogate Liaison</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>