force-app/main/default/objects/Contact/fields/Use_Other_Address__c.field-meta.xml
<CustomField>
    <fullName>Use_Other_Address__c</fullName>
    <description>Uesd to flag whether Other Address is populated and hence should be used for HCP Invoices and 1099. This field is used by A5 Doc for conditional merge section.</description>
    <formula>if (
And (
NOT(ISBLANK( OtherCity)),
NOT(ISBLANK( OtherState)),
NOT(ISBLANK( OtherStreet)),
NOT(ISBLANK( OtherPostalCode))), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Other Address</label>
    <type>Checkbox</type>
</CustomField>