force-app/main/default/objects/Contact/fields/VIP_Celebrity__c.field-meta.xml
<CustomField>
    <fullName>VIP_Celebrity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP/Celebrity</label>
    <type>Checkbox</type>
</CustomField>