force-app/main/default/objects/Contact/fields/Year_Referrer_Record_Created__c.field-meta.xml
<CustomField>
    <fullName>Year_Referrer_Record_Created__c</fullName>
    <formula>DATEVALUE(Referring_Contact__r.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Record Create Date</label>
    <type>Date</type>
</CustomField>