force-app/main/default/objects/Contact/recordTypes/Medical_Professional.recordType-meta.xml
<RecordType>
    <fullName>Medical_Professional</fullName>
    <active>true</active>
    <description>OBGYN, MD, Nurse, Midwife</description>
    <label>Medical Professional</label>
</RecordType>