force-app/main/default/objects/Contact/recordTypes/Professional.recordType-meta.xml
<RecordType>
    <fullName>Professional</fullName>
    <active>false</active>
    <label>Professional</label>
</RecordType>