force-app/main/default/objects/Contact/listViews/Mktg_Ambassadors.listView-meta.xml
<ListView>
    <fullName>Mktg_Ambassadors</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Referrer__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mktg: Ambassadors</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>