force-app/main/default/objects/Contact/listViews/Mktg_Ambassadors_not_enrolled.listView-meta.xml
<ListView>
    <fullName>Mktg_Ambassadors_not_enrolled</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Ambassador</value>
    </filters>
    <label>Mktg: Ambassadors (not enrolled)</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>