force-app/main/default/objects/Contact/listViews/Mktg_Referred_by_Ambassador.listView-meta.xml
<ListView>
    <fullName>Mktg_Referred_by_Ambassador</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Mktg: Referred by Ambassador</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>