force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>My Contacts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>