force-app/main/default/objects/Contact/listViews/Referrers.listView-meta.xml
<ListView>
    <fullName>Referrers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referrer__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Referrers</label>
    <sharedTo>
        <role>CEO</role>
        <role>Client_Services</role>
    </sharedTo>
</ListView>