force-app/main/default/objects/Contact/listViews/tdc_tvte__Verified_contacts.listView-meta.xml
<ListView>
    <fullName>tdc_tvte__Verified_contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>tdc_tvte__Email_Status__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>tdc_tvte__Number_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Verified Contacts</label>
</ListView>