force-app/main/default/objects/Contact/listViews/tdc_tvte__VTM_Custom_View.listView-meta.xml
<ListView>
    <fullName>tdc_tvte__VTM_Custom_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>tdc_tvte__Email_Status__c</columns>
    <columns>CONTACT.PHONE4</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>tdc_tvte__Number_Status__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CONTACT.LAST_NAME</field>
        <operation>equals</operation>
        <value>360 degree Friday</value>
    </filters>
    <label>VTM Custom View</label>
</ListView>